# moshpit

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  README.md  Rakefile.toml  TODO.md  bacon.toml
.cargo/: audit.toml
.github/: codecov.yml
.github/prompts/: plan-mosh_style_display_sync.prompt.md
.github/workflows/: audit.yml  barto.yml  moshpit.yml  package-test.yml  release.yml  test-aur-publish.yml
agent/: Cargo.toml  build.rs
agent/src/: cli.rs  config.rs  main.rs  runtime.rs  vault.rs
agent/src/unlock/: fido2.rs  fprintd.rs  macos_keychain.rs  mod.rs  passphrase.rs  secret_service.rs  ssh_agent.rs  systemd_creds.rs  tpm.rs
agent/tests/: agent_integration.rs
docker/: Dockerfile.aarch64-unknown-linux-musl  Dockerfile.x86_64-unknown-linux-musl
docs/: algorithms.md
keygen/: Cargo.toml
keygen/src/: cli.rs  main.rs  runtime.rs
libmoshpit/: Cargo.toml  build.rs
libmoshpit/fuzz/: Cargo.toml
libmoshpit/fuzz/artifacts/fuzz_encframe_decrypt/: crash-nak-vec-u64-underflow
libmoshpit/fuzz/artifacts/fuzz_frame/: .gitkeep
libmoshpit/fuzz/corpus/fuzz_emulator/: seed_basic  seed_plain  seed_sgr
libmoshpit/fuzz/corpus/fuzz_encframe_decrypt/: seed_compressed_bytes  seed_state_chunk  seed_statesync_diff
libmoshpit/fuzz/corpus/fuzz_escape_intercept/: seed_mixed  seed_osc10  seed_xtwinops
libmoshpit/fuzz/corpus/fuzz_frame/: .gitkeep  crash-ff8e016881278559e9754b0116854ad9f5d0df33
libmoshpit/fuzz/corpus/fuzz_keyfile/: seed_private  seed_public
libmoshpit/fuzz/corpus/fuzz_pubkey_parse/: seed_basic
libmoshpit/fuzz/corpus/fuzz_statesync/: chunk_out_of_order  chunked_full_state  diff_before_state  full_plain  full_then_diff_empty  full_then_real_diff  two_chunks
libmoshpit/fuzz/corpus/fuzz_zstd_decompress/: high_ratio  valid_small
libmoshpit/fuzz/fuzz_targets/: fuzz_emulator.rs  fuzz_encframe.rs  fuzz_encframe_decrypt.rs  fuzz_escape_intercept.rs  fuzz_frame.rs  fuzz_keyfile.rs  fuzz_pubkey_parse.rs  fuzz_statesync.rs  fuzz_zstd_decompress.rs  regression_emulator.rs  regression_encframe.rs  regression_encframe_decrypt.rs  regression_escape_intercept.rs  regression_frame.rs  regression_keyfile.rs  regression_pubkey_parse.rs  regression_statesync.rs  regression_zstd_decompress.rs
libmoshpit/src/: connection.rs  error.rs  frame.rs  kex.rs  lib.rs  reader.rs  session.rs  tracing.rs  udp.rs  utils.rs  uuid.rs  writer.rs
libmoshpit/src/agent/: client.rs  mod.rs  protocol.rs
libmoshpit/src/config/: mod.rs  mps.rs  tracing.rs
libmoshpit/src/frames/: encframe.rs  frame.rs  mod.rs
libmoshpit/src/kex/: mod.rs  negotiate.rs  reader.rs  sender.rs
libmoshpit/src/keygen/: mod.rs  pk.rs
libmoshpit/src/tcp/: mod.rs  reader.rs  writer.rs
libmoshpit/src/tcp_transport/: mod.rs
libmoshpit/src/term/: emulator.rs  mod.rs  prediction.rs  renderer.rs
libmoshpit/src/udp/: mod.rs  reader.rs  sender.rs  statesync.rs
libmoshpit/tests/: agent_client.rs
libmoshpit/tests/keys/: id_ed25519_test_enc  id_x25519_test  id_x25519_test.pub  id_x25519_test_enc.pub
moshpit/: Cargo.toml
moshpit/src/: cli.rs  config.rs  effective.rs  main.rs  runtime.rs
moshpit/src/tcp/: reader.rs  sender.rs
moshpit/src/udp/: reader.rs  sender.rs
moshpits/: Cargo.toml
moshpits/src/: cli.rs  config.rs  logind.rs  main.rs  runtime.rs  session.rs  udp.rs  utmp.rs
moshpits/src/udp/: mod.rs  reader.rs  sender.rs
packaging/arch/moshpit-agent/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-fido2/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-fido2-unstable-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-fprintd/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-full/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-full-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-full-unstable-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-secret-service/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-ssh-agent-piggyback/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-ssh-agent-piggyback-unstable-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-systemd-creds/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-systemd-creds-unstable-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-tpm/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-agent-unstable-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-bin/: .SRCINFO  PKGBUILD
packaging/arch/moshpit-keygen-bin/: .SRCINFO  PKGBUILD
packaging/debian/: moshpit-keygen.yaml  moshpit.yaml  moshpits.yaml
packaging/homebrew/: moshpit-keygen-unstable.rb.tmpl  moshpit-keygen.rb.tmpl  moshpit-unstable.rb.tmpl  moshpit.rb.tmpl  moshpits-unstable.rb.tmpl  moshpits.rb.tmpl
packaging/nfpm/: moshpit-aarch64.yaml  moshpit-agent-aarch64.yaml  moshpit-agent-fido2-aarch64.yaml  moshpit-agent-fido2-unstable-aarch64.yaml  moshpit-agent-fido2-unstable.yaml  moshpit-agent-fido2.yaml  moshpit-agent-full-aarch64.yaml  moshpit-agent-full-unstable-aarch64.yaml  moshpit-agent-full-unstable.yaml  moshpit-agent-full.yaml  moshpit-agent-ssh-agent-piggyback-aarch64.yaml  moshpit-agent-ssh-agent-piggyback-unstable-aarch64.yaml  moshpit-agent-ssh-agent-piggyback-unstable.yaml  moshpit-agent-ssh-agent-piggyback.yaml  moshpit-agent-systemd-creds-aarch64.yaml  moshpit-agent-systemd-creds-unstable-aarch64.yaml  moshpit-agent-systemd-creds-unstable.yaml  moshpit-agent-systemd-creds.yaml  moshpit-agent-unstable-aarch64.yaml  moshpit-agent-unstable.yaml  moshpit-agent.yaml  moshpit-keygen-aarch64.yaml  moshpit-keygen-unstable-aarch64.yaml  moshpit-keygen-unstable.yaml  moshpit-keygen.yaml  moshpit-unstable-aarch64.yaml  moshpit-unstable.yaml  moshpit.yaml  moshpits-aarch64.yaml  moshpits-unstable-aarch64.yaml  moshpits-unstable.yaml  moshpits.yaml
packaging/scripts/: gen_srcinfo.py
packaging/systemd/: moshpit-agent.service  moshpit-agent.socket
scripts/: MPA_TESTING.md  MP_TESTING.md  mp-test.toml  mps-test.toml  run_all.fish  run_all.ps1  run_install.fish  run_install.ps1  run_musl.fish  run_musl.ps1  test-keys.fish
xtask/: Cargo.toml
xtask/src/: main.rs
(+34 files in other folders)
