[workspace]
resolver = "3"

members = ["keygen","libmoshpit", "moshpit", "moshpits"]

[workspace.dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.15.0"
bon = "3.8.1"
bytes = "1.11.0"
clap = { version = "4.5.52", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
getset = "0.1.6"
rustversion = "1.0.22"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
] }
tokio-util = "0.7.17"
tracing = { version = "0.1.41", features = [
  "max_level_trace",
  "release_max_level_trace",
] }
tracing-subscriber-init = { version = "0.2.3", features = ["tstime"] }
uuid = { version = "1.18.1", features = ["v4"] }
vergen-gix = { version = "2.1.0-beta.6", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }
vergen-pretty = { version = "2.1.1", features = ["bincode", "serde"] }
