[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "Perform various key tasks for moshpit"
documentation = "https://github.com/rustyhorde/moshpit#mp-keygen"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpit-keygen"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.9.3"
rust-version = "1.95.0"

[[bin]]
name = "mp-keygen"
path = "src/main.rs"

[features]
unstable = ["libmoshpit/unstable"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dialoguer = { workspace = true }
getset = { workspace = true }
libmoshpit = { version = "0.9.3", path = "../libmoshpit" }
vergen-pretty = { workspace = true }
[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
