[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "A Rust implementation of in the same vein as Mosh, the mobile shell."
documentation = "https://docs.rs/libmoshpit"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "libmoshpit"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.1.0"
rust-version = "1.88.0"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
argon2 = { version = "0.6.0-rc.2", features = ["getrandom"] }
aws-lc-rs = { workspace = true }
base64 = "0.22.1"
bincode = "2.0.1"
bishop = "1.0.0"
bon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs2 = "3.0.1"
getset = { workspace = true }
local-ip-address = "0.6.5"
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "=0.3.19", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true }
whoami = "1.6.1"

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[dev-dependencies]
tempfile = "3.23.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
