[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "A Rust implementation of in the same vein as Mosh, the mobile shell."
documentation = "https://docs.rs/libmoshpit"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "libmoshpit"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.8.6"
rust-version = "1.91.1"

[features]
unstable = ["aws-lc-rs/unstable"]

[dependencies]
ansi-control-codes = { version = "1.0.1", features = ["parser", "explain"] }
anyhow = { workspace = true }
argon2 = { version = "0.6.0-rc.8", features = ["getrandom"] }
aws-lc-rs = { workspace = true }
base64 = "0.22.1"
bincode-next = "3.0.0-rc.14"
bishop = "1.0.0"
bon = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs2 = "3.0.1"
getset = { workspace = true }
regex = "1.12.3"
serde = { workspace = true }
socket2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["process","sync","time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "fmt",
    "time",
] }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true }
vt100 = { workspace = true }
whoami = "2.1.2"
zeroize = { workspace = true }
zstd = { workspace = true }
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[dev-dependencies]
proptest = "1.11.0"
tempfile = "3.27.0"
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
