[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "A Rust implementation of in the same vein as Mosh, the mobile shell."
documentation = "https://docs.rs/libmoshpit"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpit"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.1.0"
rust-version = "1.91.1"

[[bin]]
name = "mp"
path = "src/main.rs"

[features]
unstable = []

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
dialoguer = "0.12.0"
getset = { workspace = true }
libmoshpit = { version = "0.1.0", path = "../libmoshpit" }
serde = { workspace = true }
terminal_size = "0.4.4"
tokio = { workspace = true, features = ["io-std", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
vergen-pretty = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(coverage,coverage_nightly)',
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
