[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "A Rust implementation of in the same vein as Mosh, the mobile shell."
documentation = "https://docs.rs/libmoshpit"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpit"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.8.2"
rust-version = "1.91.1"

[[bin]]
name = "mp"
path = "src/main.rs"

[features]
unstable = ["libmoshpit/unstable"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
dialoguer = "0.12.0"
getset = { workspace = true }
libmoshpit = { version = "0.8.2", path = "../libmoshpit" }
dirs2 = "3.0.1"
serde = { workspace = true }
terminal_size = "0.4.4"
tokio = { workspace = true, features = ["io-std", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.3"

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
