[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "moshpit client (mp) — encrypted, resilient remote terminal session client"
documentation = "https://github.com/rustyhorde/moshpit#moshpit-client-mp"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpit"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.9.1"
rust-version = "1.95.0"

[[bin]]
name = "mp"
path = "src/main.rs"

[features]
unstable = ["libmoshpit/unstable"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
crossterm = "0.29.0"
dialoguer = { workspace = true }
dirs2 = { workspace = true }
getset = { workspace = true }
libmoshpit = { version = "0.9.1", path = "../libmoshpit" }
serde = { workspace = true }
serde_json = "1.0.150"
terminal_size = "0.4.4"
toml = "1.1.2"
tokio = { workspace = true, features = ["io-std", "signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
