[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "A Rust implementation of in the same vein as Mosh, the mobile shell."
documentation = "https://docs.rs/libmoshpit"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpits"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.8.6"
rust-version = "1.91.1"

[[bin]]
name = "mps"
path = "src/main.rs"

[features]
unstable = ["libmoshpit/unstable"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
getset = { workspace = true }
libmoshpit = { version = "0.8.6", path = "../libmoshpit" }
zstd = { workspace = true }
portable-pty = "0.9.0"
serde = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { workspace = true }
vt100 = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "1.0.0-alpha.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
