[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "network-programming", "cryptography"]
description = "moshpits server (mps) — server daemon for moshpit remote terminal sessions"
documentation = "https://github.com/rustyhorde/moshpit#moshpits-server-mps"
edition = "2024"
homepage = "https://github.com/rustyhorde/moshpit"
keywords = ["ssh", "mosh"]
license = "MIT OR Apache-2.0"
name = "moshpits"
readme = "../README.md"
repository = "https://github.com/rustyhorde/moshpit"
version = "0.8.22"
rust-version = "1.95.0"

[[bin]]
name = "mps"
path = "src/main.rs"

[features]
unstable = ["libmoshpit/unstable"]

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
getset = { workspace = true }
libmoshpit = { version = "0.8.22", path = "../libmoshpit" }
portable-pty = "0.9.0"
serde = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber-init = { workspace = true }
uuid = { workspace = true }
vergen-pretty = { workspace = true }
vt100 = { workspace = true }
zstd = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "test-util"] }

[build-dependencies]
anyhow = { workspace = true }
rustversion = { workspace = true }
vergen-gix = { workspace = true }
