[package]
name = "libmoshpit-fuzz"
version = "0.0.0"
edition = "2024"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { version = "1.4.2", features = ["derive"] }
aws-lc-rs = { version = "1.17.0", features = ["bindgen"] }
libfuzzer-sys = "0.4.12"
libmoshpit = { path = ".." }
uuid = "1.23.2"

# Prevent the workspace from treating this crate as a member.
[workspace]

[[bin]]
name = "fuzz_frame"
path = "fuzz_targets/fuzz_frame.rs"
test = false
doc = false

[[bin]]
name = "fuzz_encframe"
path = "fuzz_targets/fuzz_encframe.rs"
test = false
doc = false

[[test]]
name = "regression_encframe"
path = "fuzz_targets/regression_encframe.rs"

[[test]]
name = "regression_frame"
path = "fuzz_targets/regression_frame.rs"
